--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -45,5 +45,15 @@
       </p>
     </footer>
 
+    <script>
+      var data = {
+        "name":	"Screen Shot 2018-02-05 at 5.56.07 PM.png",
+        "size":	141907,
+        "file":	"imgFile-1517888421866.png",
+        "date":	"2018-02-06T03:40:21.899Z"
+      }
+      document.getElementById("code").innerHTML = JSON.stringify(data, undefined, 2);
+    </script>
+
 </body>
 </html>
