--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,1 +1,47 @@
-<div>Hi there!</div>
+<div class="row">
+  <div class="col-xs-12">
+    <% if (errors && errors.length > 0) { %>
+      <div class="alert alert-danger">
+        <% for (error of errors) { %>
+          <%= error %><br>
+        <% } %>
+      </div>
+    <% } %>
+  </div>
+</div>
+
+<div class="row">
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <form action="/upload" enctype="multipart/form-data" method="POST">
+        <div class="col-xs-12">
+          <input type="file" name="imgFile" class="btn btn-lg upload-btn buttons" />
+        </div>
+
+        <div class="col-xs-12">
+          <button type="submit" name="send" class="btn btn-lg upload-btn buttons" >Upload File</button>
+          <div class="hint">Supported files: jpg, jpeg, png, gif.</div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12">
+    <h2>User stories:</h2>
+    <blockquote>
+      <ol>
+        <li>I can submit a FormData object that includes a file upload.</li>
+        <li>When I submit something, I will receive the file size in bytes within the JSON response.</li>
+      </ol>
+    </blockquote>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12">
+    <h2>Output</h2>
+    <pre id="code"></pre>
+  </div>
+</div>
